--- a/say-it/src/App.css
+++ b/say-it/src/App.css
@@ -1,40 +1,28 @@
+
+/* App.css */
 .App {
-  text-align: center;
+  font-family: Segoe UI, sans-serif;
+  color: #FF0000;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header-image {
+  width: 100%; /* Makes the image take up the full width of its container */
+  height: auto; /* Maintains the aspect ratio */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.button:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.3);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.button:active {
+  transform: translateY(2px);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
-.App-link {
-  color: #61dafb;
-}
+.button:focus {
+  outline: none;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .submit input {
@@ -46,39 +34,27 @@
   padding-right: 1rem;
 
   outline: none;
-  color: #a1a1a1;
-  background: #1f2123;
+  color: #FF0000;
+  background: #ffffff;
 }
 
+.button-container {
+  display:inline-flex;
+  flex-direction: column; /* Stack buttons vertically */
+  gap: 30px; /* Space between buttons */
+}
 .button {
-  background-color: #04AA6D;
-  border: none;
+  flex: 0 0 50px;
+  font-family: Segoe UI, sans-serif;
+  background: linear-gradient(135deg, #FF0000, orange);
   color: white;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-}
-
-form {
-  display: flex;
-  align-items: center;
-}
-input {
-  flex: 1;
-  padding: 5px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-button {
-  padding: 5px 10px;
-  margin-left: 5px;
-  background-color: #007bff;
-  color: white;
+  font-size: 1.5em;
+  font-weight: bold; 
+  padding: 15px 30px;
   border: none;
-  border-radius: 4px;
+  border-radius: 30px;
   cursor: pointer;
+  transition: transform 0.2s, box-shadow 0.3s;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+  outline: none;
 }
